# filewalker

./: Cargo.toml  README.md
src/: lib.rs
testfiles/: 1.txt  2.txt
